eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Teller_Transaction_Override__c.object
<CustomObject>
    <fields>
        <fullName>Authorisor_Type__c</fullName>
        <label>Authorisor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Teller Transaction Overrides</relationshipLabel>
        <relationshipName>Teller_Transaction_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limit_Applied__c</fullName>
        <label>Limit Applied</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Type__c</fullName>
        <label>Override Type</label>
        <picklist>
            <picklistValues>
                <fullName>Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Transaction_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teller_Transaction__c</fullName>
        <label>Teller Transaction</label>
        <referenceTo>Teller_Transaction__c</referenceTo>
        <relationshipLabel>Teller Transaction Overrides</relationshipLabel>
        <relationshipName>Teller_Transaction_Overrides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teller Transaction Override</label>
    <nameField>
        <label>Teller Transaction Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Transaction Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>